DevOps/Kubernetes/Individual-Projects/vault/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: vault-ingress
  namespace: vault
  annotations:
    kubernetes.io/tls-acme: "true"
    cert-manager.io/cluster-issuer: development-issuer
    #nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
spec:
  ingressClassName: nginx
  rules:
  - host: vault.nexus-core.dev
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: vault-ui
            port:
              number: 8200
  tls:
  - hosts:
    - vault.nexus-core.dev
    secretName: vault-ui-tls-secret
